--- a/packages/components/text-field/package.json
+++ b/packages/components/text-field/package.json
@@ -30,8 +30,10 @@
     "react": "*",
     "styled-components": "*",
     "clsx": "*",
-    "@phantomthief-react/utils": "workspace:*",
-    "@phantomthief-react/hooks": "workspace:*",
+    "@phantomthief-react/utils.definations": "workspace:*",
+    "@phantomthief-react/utils.helpers": "workspace:*",
+    "@phantomthief-react/hooks.focus-with-callback": "workspace:*",
+    "@phantomthief-react/hooks.sync-state-with-props": "workspace:*",
     "@phantomthief-react/components.post-adorment": "workspace:*",
     "@phantomthief-react/components.pre-adorment": "workspace:*",
     "@phantomthief-react/components.helper-text": "workspace:*",
