--- a/packages/components/navbar/package.json
+++ b/packages/components/navbar/package.json
@@ -29,11 +29,12 @@
     "typescript": "*",
     "react": "*",
     "clsx": "*",
-    "@phantomthief-react/utils": "workspace:*"
+    "@phantomthief-react/utils.definations": "workspace:*"
   },
   "devDependencies": {
     "@phantomthief-react/components.typography": "workspace:*",
-    "@phantomthief-react/components.button": "workspace:*"
+    "@phantomthief-react/components.button": "workspace:*",
+    "@phantomthief-react/utils.constants": "workspace:*"
   },
   "author": "@DinhThienPhuc",
   "license": "ISC",
