--- a/packages/components/post-adorment/package.json
+++ b/packages/components/post-adorment/package.json
@@ -30,7 +30,8 @@
     "react": "*",
     "styled-components": "*",
     "clsx": "*",
-    "@phantomthief-react/utils": "workspace:*",
+    "@phantomthief-react/utils.helpers": "workspace:*",
+    "@phantomthief-react/utils.definations": "workspace:*",
     "@phantomthief-react/components.icon": "workspace:*"
   },
   "author": "@DinhThienPhuc",
